# dnd_guide

./: .dockerignore  .gitignore  Dockerfile  app.py  app_error.py  config.py  di.py  docker-compose-postgres.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
adapters/inmemory/: character_subclass.py  class_feature_repository.py  class_level.py  class_repository.py  creature_size.py  feat.py  material_component.py  race.py  source.py  subrace.py  tool.py  user.py  user_repository.py  weapon_property.py
alembic/: env.py
alembic/versions/: 2025_11_15_1312-9871e940a1da_initial.py  2025_11_16_0019-001bf9388de1_.py  2025_11_16_0019-ef3f5700cb4a_initial.py  2025_11_17_2138-be15d17dcc04_initial.py  2025_11_17_2159-d30c69c7e3e8_initial.py  2025_11_18_1644-83fa423d5579_initial.py  2025_12_17_1925-4b392fae778a_.py  2025_12_17_2225-b2601be3bf1e_.py
application/repositories/: __init__.py  character_class.py  class_feature.py
application/repository/: __init__.py  armor.py  character_class.py  character_subclass.py  class_feature.py  class_level.py  creature_size.py  creature_type.py  feat.py  material.py  material_component.py  race.py  source.py  spell.py  subclass_feature.py  subrace.py  tool.py  user.py  weapon.py  weapon_kind.py  weapon_property.py
di/: __init__.py  di_use_cases.py
domain/: coin.py  creature_size.py  creature_type.py  damage_type.py  dice.py  error.py  game_time.py  length.py  mixin.py  modifier.py  skill.py  type_armor.py  type_weapon.py  weapon_type.py  weight.py
domain/armor/: __init__.py  armor.py  (+6 more)
ports/: app.py
tests/: conftest.py
(+575 files in other folders)
