[project]
name = "dnd-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "litestar[standard]>=2.18.0",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
